--- a/Button.html
+++ b/Button.html
@@ -8,36 +8,39 @@
     border-radius: 4px;
     cursor: pointer; 
     margin-right: 10px;
+    transition: opacity 0.15s;
     }
-</style>
 
-<button class="subscribe-button">
-  SUBCRIBE
-</button>
+  .subscribe-button:hover {
+    opacity:0.5
+  }
+  
 
-<style>
-  .join-button {
-    background-color:white;
-    color: rgba(0, 28, 88, 0.767);
-    border:rgba(0, 0, 255, 0.247);
-    border-style: solid;
-    border: radius 100px;;
-    height: 43px;
-    width: 105px;
-    border-radius: none;
-    cursor: pointer;
-    margin-right: 10px;
-    }
-</style>
+    .join-button {
+      background-color:white;
+      color: rgba(0, 28, 88, 0.767);
+      font-size: 19px;
+      border:rgba(0, 0, 255, 0.247);
+      border-style: solid;
+      border: radius 100px;;
+      height: 43px;
+      width: 105px;
+      border-radius: none;
+      cursor: pointer;
+      margin-right: 10px;
+      transition: background-color 0.15s,
+        color 0.15s; 
+  }
+  .join-button:hover{
+    background-color:blue;
+    color: white;
+  }
+  .join-button:active{
+    opacity: 0.5;
+  }
 
-<button class="join-button">
-  JOIN
-</button>
-
-
-<style>
   .tweet-button {
-    background-color:#0606bdfb;
+    background-color:rgb(8, 182, 240);
     color:white;
     border: none;
     height: 44px;
@@ -46,8 +49,20 @@
     cursor: pointer; 
     font-weight: bold;
     font-size: 19px;
-    }
-</style>
+    transition: background-color 0.2s;
+  }
+  .tweet-button:hover{
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.247);
+  }
+  </style>
+
+<button class="subscribe-button">
+  SUBCRIBE
+</button>
+
+<button class="join-button">
+  JOIN
+</button>
 
 <button class="tweet-button">
   Tweet
